--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -3967,7 +3967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 214,
    "id": "cc13c894",
    "metadata": {},
    "outputs": [
@@ -4146,7 +4146,7 @@
        "accuracy   0.755000  0.755000  0.755000"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4171,7 +4171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 215,
    "id": "551de26a",
    "metadata": {},
    "outputs": [
@@ -4313,7 +4313,7 @@
        "9  0.330935  0.901961  0.484211  0.7550  0.7550  0.7550"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4325,7 +4325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 216,
    "id": "5c894e66",
    "metadata": {},
    "outputs": [
@@ -4445,19 +4445,20 @@
        "9  0.330935  0.901961  0.484211  0.7550"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_df.drop(output_df.columns[4:6], axis=1)"
+    "shorter_df = output_df.drop(output_df.columns[4:6], axis=1)\n",
+    "shorter_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "2bf3a688",
+   "execution_count": 217,
+   "id": "382bbe44",
    "metadata": {},
    "outputs": [
     {
@@ -4481,31 +4482,25 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Precision</th>\n",
+       "      <th>0</th>\n",
        "      <td>0.523810</td>\n",
        "      <td>0.431373</td>\n",
        "      <td>0.473118</td>\n",
        "      <td>0.8775</td>\n",
-       "      <td>0.8775</td>\n",
-       "      <td>0.8775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Recall</th>\n",
+       "      <th>1</th>\n",
        "      <td>0.566667</td>\n",
        "      <td>0.333333</td>\n",
        "      <td>0.419753</td>\n",
-       "      <td>0.8825</td>\n",
-       "      <td>0.8825</td>\n",
        "      <td>0.8825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4514,16 +4509,12 @@
        "      <td>0.529412</td>\n",
        "      <td>0.442623</td>\n",
        "      <td>0.8300</td>\n",
-       "      <td>0.8300</td>\n",
-       "      <td>0.8300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.619048</td>\n",
        "      <td>0.509804</td>\n",
        "      <td>0.559140</td>\n",
-       "      <td>0.8975</td>\n",
-       "      <td>0.8975</td>\n",
        "      <td>0.8975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4532,16 +4523,12 @@
        "      <td>0.431373</td>\n",
        "      <td>0.488889</td>\n",
        "      <td>0.8850</td>\n",
-       "      <td>0.8850</td>\n",
-       "      <td>0.8850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0.353846</td>\n",
        "      <td>0.901961</td>\n",
        "      <td>0.508287</td>\n",
-       "      <td>0.7775</td>\n",
-       "      <td>0.7775</td>\n",
        "      <td>0.7775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4550,16 +4537,12 @@
        "      <td>0.921569</td>\n",
        "      <td>0.525140</td>\n",
        "      <td>0.7875</td>\n",
-       "      <td>0.7875</td>\n",
-       "      <td>0.7875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>0.340909</td>\n",
        "      <td>0.882353</td>\n",
        "      <td>0.491803</td>\n",
-       "      <td>0.7675</td>\n",
-       "      <td>0.7675</td>\n",
        "      <td>0.7675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -4568,8 +4551,6 @@
        "      <td>0.921569</td>\n",
        "      <td>0.522222</td>\n",
        "      <td>0.7850</td>\n",
-       "      <td>0.7850</td>\n",
-       "      <td>0.7850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -4577,7 +4558,139 @@
        "      <td>0.901961</td>\n",
        "      <td>0.484211</td>\n",
        "      <td>0.7550</td>\n",
-       "      <td>0.7550</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Precision    Recall        F1  Accuracy\n",
+       "0   0.523810  0.431373  0.473118    0.8775\n",
+       "1   0.566667  0.333333  0.419753    0.8825\n",
+       "2   0.380282  0.529412  0.442623    0.8300\n",
+       "3   0.619048  0.509804  0.559140    0.8975\n",
+       "4   0.564103  0.431373  0.488889    0.8850\n",
+       "5   0.353846  0.901961  0.508287    0.7775\n",
+       "6   0.367188  0.921569  0.525140    0.7875\n",
+       "7   0.340909  0.882353  0.491803    0.7675\n",
+       "8   0.364341  0.921569  0.522222    0.7850\n",
+       "9   0.330935  0.901961  0.484211    0.7550"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shorter_df = shorter_df.rename({0: 'Precision', 1: 'Recall', 2: 'F1', 3: 'Accuracy'}, axis=1)\n",
+    "shorter_df\n",
+    "\n",
+    "# axis 1-columns 0-rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "ff5820e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Model 1: Logistic</th>\n",
+       "      <td>0.523810</td>\n",
+       "      <td>0.431373</td>\n",
+       "      <td>0.473118</td>\n",
+       "      <td>0.8775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 2: SVM</th>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.419753</td>\n",
+       "      <td>0.8825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 3: Decision Tree</th>\n",
+       "      <td>0.380282</td>\n",
+       "      <td>0.529412</td>\n",
+       "      <td>0.442623</td>\n",
+       "      <td>0.8300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 4: Random Forest</th>\n",
+       "      <td>0.619048</td>\n",
+       "      <td>0.509804</td>\n",
+       "      <td>0.559140</td>\n",
+       "      <td>0.8975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 5: Gradient Boosted Tree</th>\n",
+       "      <td>0.564103</td>\n",
+       "      <td>0.431373</td>\n",
+       "      <td>0.488889</td>\n",
+       "      <td>0.8850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 6: Logisitic-ROS</th>\n",
+       "      <td>0.353846</td>\n",
+       "      <td>0.901961</td>\n",
+       "      <td>0.508287</td>\n",
+       "      <td>0.7775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 7: Logistic-SMOTE</th>\n",
+       "      <td>0.367188</td>\n",
+       "      <td>0.921569</td>\n",
+       "      <td>0.525140</td>\n",
+       "      <td>0.7875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 8: Logistic-Cluster centroid US</th>\n",
+       "      <td>0.340909</td>\n",
+       "      <td>0.882353</td>\n",
+       "      <td>0.491803</td>\n",
+       "      <td>0.7675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 9: Balanced Random Forest Classifier</th>\n",
+       "      <td>0.364341</td>\n",
+       "      <td>0.921569</td>\n",
+       "      <td>0.522222</td>\n",
+       "      <td>0.7850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model 10: Easy Ensemble Ada Boost Classifier</th>\n",
+       "      <td>0.330935</td>\n",
+       "      <td>0.901961</td>\n",
+       "      <td>0.484211</td>\n",
        "      <td>0.7550</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -4585,39 +4698,55 @@
        "</div>"
       ],
       "text/plain": [
-       "                  0         1         2       3       4       5\n",
-       "Precision  0.523810  0.431373  0.473118  0.8775  0.8775  0.8775\n",
-       "Recall     0.566667  0.333333  0.419753  0.8825  0.8825  0.8825\n",
-       "2          0.380282  0.529412  0.442623  0.8300  0.8300  0.8300\n",
-       "3          0.619048  0.509804  0.559140  0.8975  0.8975  0.8975\n",
-       "4          0.564103  0.431373  0.488889  0.8850  0.8850  0.8850\n",
-       "5          0.353846  0.901961  0.508287  0.7775  0.7775  0.7775\n",
-       "6          0.367188  0.921569  0.525140  0.7875  0.7875  0.7875\n",
-       "7          0.340909  0.882353  0.491803  0.7675  0.7675  0.7675\n",
-       "8          0.364341  0.921569  0.522222  0.7850  0.7850  0.7850\n",
-       "9          0.330935  0.901961  0.484211  0.7550  0.7550  0.7550"
+       "                                              Precision    Recall        F1  \\\n",
+       "Model 1: Logistic                              0.523810  0.431373  0.473118   \n",
+       "Model 2: SVM                                   0.566667  0.333333  0.419753   \n",
+       "Model 3: Decision Tree                         0.380282  0.529412  0.442623   \n",
+       "Model 4: Random Forest                         0.619048  0.509804  0.559140   \n",
+       "Model 5: Gradient Boosted Tree                 0.564103  0.431373  0.488889   \n",
+       "Model 6: Logisitic-ROS                         0.353846  0.901961  0.508287   \n",
+       "Model 7: Logistic-SMOTE                        0.367188  0.921569  0.525140   \n",
+       "Model 8: Logistic-Cluster centroid US          0.340909  0.882353  0.491803   \n",
+       "Model 9: Balanced Random Forest Classifier     0.364341  0.921569  0.522222   \n",
+       "Model 10: Easy Ensemble Ada Boost Classifier   0.330935  0.901961  0.484211   \n",
+       "\n",
+       "                                              Accuracy  \n",
+       "Model 1: Logistic                               0.8775  \n",
+       "Model 2: SVM                                    0.8825  \n",
+       "Model 3: Decision Tree                          0.8300  \n",
+       "Model 4: Random Forest                          0.8975  \n",
+       "Model 5: Gradient Boosted Tree                  0.8850  \n",
+       "Model 6: Logisitic-ROS                          0.7775  \n",
+       "Model 7: Logistic-SMOTE                         0.7875  \n",
+       "Model 8: Logistic-Cluster centroid US           0.7675  \n",
+       "Model 9: Balanced Random Forest Classifier      0.7850  \n",
+       "Model 10: Easy Ensemble Ada Boost Classifier    0.7550  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_2 = output_df.rename({0: 'Precision', 1: 'Recall'}, axis=1)\n",
-    "df_2\n",
-    "\n",
-    "#1-columns 0-rows"
+    "shorter_df = shorter_df.rename({0: 'Model 1: Logistic', 1: 'Model 2: SVM', 2: 'Model 3: Decision Tree', \n",
+    "                                3: 'Model 4: Random Forest', 4: 'Model 5: Gradient Boosted Tree', \n",
+    "                                5: 'Model 6: Logisitic-ROS', 6: 'Model 7: Logistic-SMOTE', \n",
+    "                                7: 'Model 8: Logistic-Cluster centroid US', 8: 'Model 9: Balanced Random Forest Classifier', \n",
+    "                                9: 'Model 10: Easy Ensemble Ada Boost Classifier', \n",
+    "                               }\n",
+    "                               , axis=0)\n",
+    "shorter_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "id": "ed706f45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_df.to_csv('df_test.csv', index = False)"
+    "shorter_df.to_csv('df_test.csv')"
    ]
   },
   {
