output results read and white

--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -4166,7 +4166,7 @@
     "- 0 - Precision\n",
     "- 1 - Recall\n",
     "- 2 - F1 score\n",
-    "- 3-5 - Accuracy"
+    "- 3 - Accuracy"
    ]
   },
   {
@@ -4458,7 +4458,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "382bbe44",
+   "id": "25f01c13",
    "metadata": {},
    "outputs": [
     {
@@ -4592,7 +4592,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "ff5820e2",
+   "id": "ff7d4db5",
    "metadata": {},
    "outputs": [
     {
@@ -4741,12 +4741,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 222,
    "id": "ed706f45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shorter_df.to_csv('df_test.csv')"
+    "shorter_df.to_csv('df_red.csv')"
    ]
   },
   {
