Add more comments to code

--- a/all_models_white.ipynb
+++ b/all_models_white.ipynb
@@ -3768,38 +3768,28 @@
    "id": "54776f75",
    "metadata": {},
    "source": [
-    "#### Attempt a cool graphic of the decision tree model but a little too complicated"
+    "#### Attempt a cool graphic of the decision tree model but a little too complicated\n",
+    "##### Takes a while to run-Try it on Desicions Tree classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "8dd1adaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib.pyplot as plt\n",
-    "# fn=['ph', 'sulphates', 'alcohol', 'fixed_acidity', 'volatile_acidity', 'free_sulfur_dioxide', 'citric_acid', 'residual_sugar', 'density', \n",
-    "# 'total_sulfur_dioxide', 'chlorides']\n",
-    "# cn=['Good','Not good']\n",
-    "# fig, axes = plt.subplots(nrows = 1,ncols = 1,figsize = (6,6), dpi=900)\n",
+    "import matplotlib.pyplot as plt\n",
+    "fn=['ph', 'sulphates', 'alcohol', 'fixed_acidity', 'volatile_acidity', 'free_sulfur_dioxide', 'citric_acid', 'residual_sugar', 'density', \n",
+    "'total_sulfur_dioxide', 'chlorides']\n",
+    "cn=['Good','Not good']\n",
+    "fig, axes = plt.subplots(nrows = 1,ncols = 1,figsize = (6,6), dpi=900)\n",
     "\n",
-    "# tree.plot_tree(model3,\n",
-    "#                feature_names = fn, \n",
-    "#                class_names=cn,\n",
-    "#                filled = True);\n",
-    "# fig.savefig('Redmodel3Tree.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "1b34cbbc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reportout1 = classification_report(y_test, y_pred1, output_dict=True)\n",
-    "# print(reportout1)"
+    "tree.plot_tree(model3,\n",
+    "               feature_names = fn, \n",
+    "               class_names=cn,\n",
+    "               filled = True);\n",
+    "fig.savefig('Whitemodel3Tree.png')"
    ]
   },
   {
@@ -3812,13 +3802,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 106,
+   "id": "1b34cbbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'0': {'precision': 0.8304466727438469, 'recall': 0.9411157024793388, 'f1-score': 0.8823244552058112, 'support': 968}, '1': {'precision': 0.5546875, 'recall': 0.27626459143968873, 'f1-score': 0.36883116883116884, 'support': 257}, 'accuracy': 0.8016326530612244, 'macro avg': {'precision': 0.6925670863719234, 'recall': 0.6086901469595138, 'f1-score': 0.62557781201849, 'support': 1225}, 'weighted avg': {'precision': 0.7725935238498317, 'recall': 0.8016326530612244, 'f1-score': 0.774595659615376, 'support': 1225}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "reportout1 = classification_report(y_test, y_pred1, output_dict=True)\n",
+    "print(reportout1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "id": "821cca43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1-score</th>\n",
+       "      <th>support</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.830447</td>\n",
+       "      <td>0.941116</td>\n",
+       "      <td>0.882324</td>\n",
+       "      <td>968.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.554688</td>\n",
+       "      <td>0.276265</td>\n",
+       "      <td>0.368831</td>\n",
+       "      <td>257.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.801633</td>\n",
+       "      <td>0.801633</td>\n",
+       "      <td>0.801633</td>\n",
+       "      <td>0.801633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>macro avg</th>\n",
+       "      <td>0.692567</td>\n",
+       "      <td>0.608690</td>\n",
+       "      <td>0.625578</td>\n",
+       "      <td>1225.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weighted avg</th>\n",
+       "      <td>0.772594</td>\n",
+       "      <td>0.801633</td>\n",
+       "      <td>0.774596</td>\n",
+       "      <td>1225.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              precision    recall  f1-score      support\n",
+       "0              0.830447  0.941116  0.882324   968.000000\n",
+       "1              0.554688  0.276265  0.368831   257.000000\n",
+       "accuracy       0.801633  0.801633  0.801633     0.801633\n",
+       "macro avg      0.692567  0.608690  0.625578  1225.000000\n",
+       "weighted avg   0.772594  0.801633  0.774596  1225.000000"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df_out1 = pd.DataFrame(reportout1).transpose()\n",
-    "# df_out1"
+    "df_out1 = pd.DataFrame(reportout1).transpose()\n",
+    "df_out1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a2fe29b",
+   "metadata": {},
+   "source": [
+    "#### Append all the model output matrices"
    ]
   },
   {
@@ -3857,6 +3955,14 @@
     "df_out8  = pd.DataFrame(reportout8).transpose()\n",
     "df_out9  = pd.DataFrame(reportout9).transpose()\n",
     "df_out10 = pd.DataFrame(reportout10).transpose()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "307d6aab",
+   "metadata": {},
+   "source": [
+    "#### Pick out the results for prediciting Good-1"
    ]
   },
   {
@@ -3963,6 +4069,14 @@
    "outputs": [],
    "source": [
     "# df_out9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c995832",
+   "metadata": {},
+   "source": [
+    "#### Append all results"
    ]
   },
   {
@@ -4162,11 +4276,20 @@
    "id": "32b157b0",
    "metadata": {},
    "source": [
-    "#### columns\n",
+    "#### Final layout: columns\n",
     "- 0 - Precision\n",
     "- 1 - Recall\n",
     "- 2 - F1 score\n",
     "- 3 - Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3e8144a",
+   "metadata": {},
+   "source": [
+    "#### Move accuracy row for each model to the end of the previous row (StackOverflow source of code)\n",
+    "##### https://stackoverflow.com/questions/57763470/pandas-get-second-row-and-put-it-at-the-end-of-first-row-and-automatically-cre"
    ]
   },
   {
