--- a/all_models_EDA.ipynb
+++ b/all_models_EDA.ipynb
@@ -606,7 +606,7 @@
    "source": [
     "#### Look at correlations between features and Quality before dichotomizing\n",
     "\n",
-    "#### pH has the largest poisitive correlation for both red and white wines. \n",
+    "#### pH has the largest positive correlation for both red and white wines. \n",
     "\n",
     "#### Volatile acidity has largest negative correlation for red and density for white wine"
    ]
