--- a/all_models_EDA.ipynb
+++ b/all_models_EDA.ipynb
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "68fb29a9",
    "metadata": {},
    "outputs": [
@@ -636,18 +636,19 @@
        "Name: quality, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "red_df.corr()['quality']"
+    "red_df.corr()['quality']\n",
+    "# red_df.corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "8c0589b7",
    "metadata": {},
    "outputs": [
@@ -670,13 +671,14 @@
        "Name: quality, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "white_df.corr()['quality']"
+    "white_df.corr()['quality']\n",
+    "# white_df.corr()"
    ]
   },
   {
